# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS = -O2 -g -std=c++11 -I../include/
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = exercise1_2 exercise1_3 exercise1_4 exercise1_5 exercise1_9 exercise1_10 exercise1_11 exercise1_13_1 exercise1_13_2 exercise1_13_3 exercise1_16 exercise1_19 exercise1_20 exercise1_21 exercise1_22

exercise1_2_SOURCES = exercise1_2.cpp
exercise1_3_SOURCES = exercise1_3.cpp
exercise1_4_SOURCES = exercise1_4.cpp
exercise1_5_SOURCES = exercise1_5.cpp
exercise1_9_SOURCES = exercise1_9.cpp
exercise1_10_SOURCES = exercise1_10.cpp
exercise1_11_SOURCES = exercise1_11.cpp
exercise1_13_1_SOURCES = exercise1_13_1.cpp
exercise1_13_2_SOURCES = exercise1_13_2.cpp
exercise1_13_3_SOURCES = exercise1_13_3.cpp
exercise1_16_SOURCES = exercise1_16.cpp
exercise1_19_SOURCES = exercise1_19.cpp
exercise1_20_SOURCES = exercise1_20.cpp ../include/Sales_item.h
exercise1_21_SOURCES = exercise1_21.cpp ../include/Sales_item.h
exercise1_22_SOURCES = exercise1_22.cpp ../include/Sales_item.h
